--- a/Tenso.xcodeproj/xcshareddata/xcschemes/Tenso MessagesExtension.xcscheme
+++ b/Tenso.xcodeproj/xcshareddata/xcschemes/Tenso MessagesExtension.xcscheme
@@ -88,6 +88,16 @@
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "PrefersMallocStackLoggingLite"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
